--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-6">
   <div class="branding">
-    <a href="..." class="nav-link">
+    <a routerLink="cardgrid" class="nav-link">
       <clr-icon shape="vm-bug"></clr-icon>
       <span class="title">My angular CM project</span>
     </a>
