implementing car with details

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,10 +7,10 @@
   </div>
   <div class="header-actions">
     <clr-dropdown>
-      <button class="nav-text" clrDropdownTrigger>
+      <a routerLink="" class="nav-text" clrDropdownTrigger>
         pjomcs.java@gmail.com
         <clr-icon shape="caret down"></clr-icon>
-      </button>
+      </a>
     </clr-dropdown>
   </div>
 </header>
