--- a/src/app/customers/customer-card/customer-card.component.html
+++ b/src/app/customers/customer-card/customer-card.component.html
@@ -1,13 +1,14 @@
 <div class="card">
   <div class="card-header">
-    {{}}
+    {{ customer.firstName }} {{ customer.lastName }}
   </div>
   <div class="card-block">
     <div class="card-title">
-      Block
+      {{ customer.gender }}
     </div>
     <div class="card-text">
-      ...
+      {{ customer.address }}
+      {{ customer.city }}
     </div>
   </div>
 </div>
