finish. starting edit customer

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="header-actions">
     <clr-dropdown>
-      <a routerLink="" class="nav-text" clrDropdownTrigger>
+      <a routerLink="/" class="nav-text" clrDropdownTrigger>
         pjomcs.java@gmail.com
         <clr-icon shape="caret down"></clr-icon>
       </a>
