--- a/src/app/customers/customer-card/customer-card.component.html
+++ b/src/app/customers/customer-card/customer-card.component.html
@@ -1,13 +1,20 @@
 <div class="card">
   <div class="card-header">
-    {{ customer.firstName }} {{ customer.lastName }}
+    <a> {{ customer.firstName }} {{ customer.lastName }} </a>
+    <a>
+      <i
+        title="Edit"
+        class="pull-right glyphicon glyphicon-edit edit-icon white"
+      ></i>
+    </a>
   </div>
   <div class="card-block">
     <div class="card-title">
-      {{ customer.gender }}
-    </div>
-    <div class="card-text">
-      {{ customer.address }}
+      <img
+        src="assets/images/{{ customer.gender | lowercase }}.png"
+        class="card-image"
+      />
+      {{ customer.address }},
       {{ customer.city }}
     </div>
   </div>
