to start edit feature

--- a/src/app/customers/customer-card/customer-card.component.html
+++ b/src/app/customers/customer-card/customer-card.component.html
@@ -2,10 +2,7 @@
   <div class="card-header">
     <a> {{ customer.firstName }} {{ customer.lastName }} </a>
     <a>
-      <i
-        title="Edit"
-        class="pull-right glyphicon glyphicon-edit edit-icon white"
-      ></i>
+      <clr-icon shape="note"></clr-icon>
     </a>
   </div>
   <div class="card-block">
